# gradient-text

./: README.md  pyproject.toml
Styles/: gradient.css
gradient_text/: _gradient_substring.py  _mode.py  _rich.py  _x11.py  color.py  color_list.py  console.py  default_styles.py  gradient.py  log.py  theme.py
